--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -31,7 +31,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with ruff
       run: |
-          ruff check --output format
+          ruff check --output-file output.txt [FILES]...
         
     - name: Test with pytest
       run: |
